<resources>
    <string name="app_name">labRK</string>
    <string name="settings_name">Настройки</string>
    <string name="refresh_name">Обновить</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="name_limit">Число записей</string>
    <string name="general_header">Общие</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="time">time: </string>
    <string name="open">open: </string>
    <string name="close">close: </string>
    <string name="low">low: </string>
    <string name="high">high: </string>
    <string name="volumeFrom">volumeFrom: </string>
    <string name="volumeTo">volumeTo: </string>
</resources>