<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChildActivity">

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="200dp"
        android:text="@string/time" />

    <TextView
        android:id="@+id/textOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/open"
        android:layout_below="@+id/textTime" />

    <TextView
        android:id="@+id/textClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/close"
        android:layout_below="@+id/textOpen" />

    <TextView
        android:id="@+id/textLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/low"
        android:layout_below="@+id/textClose" />

    <TextView
        android:id="@+id/textHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/high"
        android:layout_below="@+id/textLow" />

    <TextView
        android:id="@+id/textVolumeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/volumeFrom"
        android:layout_below="@+id/textHigh" />

    <TextView
        android:id="@+id/textVolumeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/volumeTo"
        android:layout_below="@+id/textVolumeFrom" />
</RelativeLayout>
</layout>